--- a/build-docs/package.json
+++ b/build-docs/package.json
@@ -10,6 +10,8 @@
   "author": "Nik Coughlin <nrkn.com@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^17.0.21"
+    "@types/commonmark": "^0.27.5",
+    "@types/node": "^17.0.21",
+    "commonmark": "^0.30.0"
   }
 }
